<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24px"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_development"
            android:icon="@drawable/progress_24px"
            android:title="@string/menu_development" />
        <item
            android:id="@+id/nav_vaccines"
            android:icon="@drawable/search_24px"
            android:title="@string/menu_vaccines" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/support_24px"
            android:title="@string/menu_support" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faq_24px"
            android:title="@string/menu_faq" />


    </group>
</menu>
