<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vactracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.vactracker.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_development"
        android:name="com.example.vactracker.ui.development.DevelopmentFragment"
        android:label="@string/menu_development"
        tools:layout="@layout/fragment_development" />

    <fragment
        android:id="@+id/nav_vaccines"
        android:name="com.example.vactracker.ui.vaccines.VaccinesFragment"
        android:label="Vaccines"
        tools:layout="@layout/fragment_vaccines" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.example.vactracker.ui.support.SupportFragment"
        android:label="Support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.example.vactracker.ui.faq.FAQFragment"
        android:label="FAQ"
        tools:layout="@layout/fragment_faq" />

</navigation>